trying to fix alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -195,3 +195,7 @@ p[type=text]{
 ul[type=text]{
   color:#fff;
 }
+
+.aboutMe-format{
+  text-align:left;
+}
